...
        navigationItem.hidesSearchBarWhenScrolling = false

        reloadNoteList()
    }
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        self.collectionView.accessibilityIdentifier = "noteCollection"
        self.createButton.accessibilityIdentifier = "createNote"
        
        reloadNoteList()
    }

    @IBAction func setEditMode(_ sender: Any) {
        self.collectionView.isEditing.toggle()
...
